...
                android:id="@+id/answer_radio_group_top"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="8dp"
                android:checkedButton="@+id/answer1"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
...
                    android:checked="false"
                    android:tag="1"
                    android:text="@string/truth_value"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
...
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/answer_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_radio_group_top"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/answer3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:tag="3"
                    android:text="@string/text_answer_3"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/answer4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
...
