<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/SliderDots"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:adjustViewBounds="true"
        android:background="?attr/colorBackground"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_slide1">

    </android.support.v4.view.ViewPager>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_quests_shape"
        android:backgroundTint="?attr/colorPrimary"
        android:onClick="onLoginButtonClick"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/StudentOrTeacherButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager" />


    <RadioGroup
        android:id="@+id/StudentOrTeacherButtons"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="?attr/colorContrasted" />

        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textColor="?attr/colorContrasted" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>