...
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar"
            android:layout_below="@+id/topBar">


            <ListView
                android:id="@+id/listViewQuests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="44dp"
                android:background="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
...
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/white_grey_border_top"
                app:labelVisibilityMode="labeled"
...
