...
    <string name="text_langfr" translatable="false">Omelette du fromage</string>
    <string name="item_xppotion_name">XP potion</string>
    <string name="item_sackofcoins_name">Sack of coin</string>
    <string name="item_xppotion_desc">A potion that gives you some XP when drunk !</string>
    <string name="item_sackofcoins_desc">A sack containing lots of shiny coins !</string>
    <string name="ask_confirmation_deletion_quest">Are you sure you want to delete this quest?</string>
    <string name="yes_upper">YES</string>
    <string name="no_upper">NO</string>
    <string name="choose_theme_red">Red</string>
    <string name="choose_theme_green">Green</string>
    <string name="choose_theme_brown">Orange</string>
    <string name="choose_theme_blue">Blue</string>
    <string name="choose_darktheme">Dark Theme</string>
    <string name="existing_questions_text">Your existing question(s) :</string>
...
