<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_quests_teacher"
        android:icon="@drawable/ic_quests_black_24dp"
        android:title="@string/title_quests" />
    <item
        android:id="@+id/navigation_courses_stats_teacher"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/courses" />
    <item
        android:id="@+id/navigation_courses_schedule_teacher"
        android:icon="@drawable/ic_schedule_24dp"
        android:title="@string/title_schedule_teacher" />
</menu>
