...
            app:layout_constraintTop_toBottomOf="@+id/quest_title"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>

    <ImageView
        android:id="@+id/delete_question"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_gravity="top|end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
